### Add comments and improve methods name (HEAD -> main)
>Fri, 17 Feb 2023 13:14:00 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Update README.md (origin/main)
>Thu, 16 Feb 2023 13:34:20 +0100

>Author: Jean-Christophe Malapert (jcmalapert@googlemail.com)

>Commiter: GitHub (noreply@github.com)




### Convert Readme.rst to markdown
>Thu, 16 Feb 2023 13:30:53 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### First import of the project
>Thu, 16 Feb 2023 11:39:46 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)



